terraform/main.tf
variable "unique_name_prefix" {
  description = "A prefix to name resources generated by this config (defaults to 'simple')."
  type = string
  default = "simple"
}

variable "admin_ip_cidr" {
  description = "The IPv4 CIDR to allow admin access (SSH and additional ports as specified below) from.  Defaults to the external IP of the system running Terraform as returned by Akamai's whatismyip service.  To allow public access (e.g. if cluster will be used by someone else with an unknown IP), set this to `0.0.0.0/0`."
  type = string
  default = ""
}

variable "unique_name_suffix" {
  description = "A suffix to name resources generated by this config (defaults to the empty string).  If left empty, an 8-character random identifier will be generated and used."
  type = string
  default = ""
}

variable "aws_region" {
  type = string
  default = "us-west-2"
}

variable "aws_vpc_cidr" {
  description = "IPv4 CIDR for the VPC to be created (defaults to 10.10.0.0/16).  Ignored if a pre-created subnet is specified."
  type = string
  default = "10.100.0.0/16"
}

variable "lab_subnet" {
  description = "A pre-created public subnet ID with the necessary networking to allow the admin IP access to the lab systems (defaults to an empty string).  If left empty, a VPC and a public subnet will be created.  If set, gateways and route tables will NOT be created."
  type = string
  default = ""
}

variable "aws_ec2_ssh_keypair" {
  description = "An existing AWS EC2 SSH keypair name to associate with EC2 instances (defaults to an empty string).  If left empty, a new SSH key will be created and its private key will be saved locally."
  type = string
  default = ""
}

variable "aws_ec2_instance_type" {
  type = string
  default = "t3.large"
}

variable "aws_ec2_linux_ami" {
  description = "The AMI to use for the Linux lab instance (defaults to the empty string).  If left empty, the latest x86_64 Rocky Linux 10 AMI is used."
  type = string
  default = ""
}

variable "aws_ec2_additional_ports" {
  description = "List of TCP ports in addition to port 22 (SSH) to allow in the admin security group (defaults to 80 and 443)."
  type = list(number)
  default = [ 80, 443, 8080 ]
}

variable "create_freebsd_instance" {
  description = "Whether to create a FreeBSD lab instance (defaults to false)."
  type = bool
  default = false
}

variable "aws_ec2_freebsd_ami" {
  description = "The AMI to use for the FreeBSD instance, if any (defaults to the empty string).  If left empty, the latest x86_64 FreeBSD 15.0 base AMI is used."
  type = string
  default = ""
}

terraform {
  required_providers {
    aws = {
      source = "hashicorp/aws"
    }
  }
}

provider "aws" {
  region = var.aws_region
}

data "aws_region" "current" {}

# Filter out local zones
data "aws_availability_zones" "available" {
  filter {
    name   = "opt-in-status"
    values = ["opt-in-not-required"]
  }
  state = "available"
}

data "aws_ami" "linux" {
  most_recent = true

  filter {
    name   = "name"
    values = ["Rocky-10-EC2-LVM-10.1-*.x86_64"]
  }

  owners = ["792107900819"]
}

data "aws_ami" "freebsd" {
  most_recent = true

  filter {
    name   = "name"
    values = ["FreeBSD 15.0-RELEASE-*-amd64 base ZFS"]
  }

  owners = ["782442783595"]
}

data "aws_vpc" "container_image_workshop" {
  count = var.lab_subnet == "" ? 0 : 1
  id = data.aws_subnet.container_image_workshop[0].vpc_id
}

data "aws_subnet" "container_image_workshop" {
  count = var.lab_subnet == "" ? 0 : 1
  id = var.lab_subnet
}

data "http" "admin_ip" {
  url = "https://whatismyip.akamai.com/"
}

resource "random_string" "unique_name_prefix" {
  length = 8
  upper = false
  special = false
}

resource "random_string" "unique_name_suffix" {
  length = 8
  upper = false
  special = false
}

locals {
  unique_name_prefix = coalesce(var.unique_name_prefix, random_string.unique_name_prefix.result)
  unique_name_suffix = coalesce(var.unique_name_suffix, random_string.unique_name_suffix.result)
  unique_name = "${var.unique_name_prefix}-scale23x-${local.unique_name_suffix}"
  public_subnet_cidr = cidrsubnet(var.aws_vpc_cidr,2,0)
  admin_ip_cidr = coalesce(var.admin_ip_cidr, "${data.http.admin_ip.response_body}/32")
  create_vpc = var.lab_subnet == "" ? true : false
  vpc_id = one(flatten([aws_vpc.container_image_workshop[*].id, data.aws_vpc.container_image_workshop[*].id]))
  subnet_id = one(flatten([aws_subnet.container_image_workshop[*].id, data.aws_subnet.container_image_workshop[*].id]))
  create_ssh_keypair = var.aws_ec2_ssh_keypair == "" ? true : false
  ec2_ssh_keypair = one(flatten([var.aws_ec2_ssh_keypair == "" ? [] : [ var.aws_ec2_ssh_keypair ], aws_key_pair.container_image_workshop[*].key_name]))
  cloud_init_config_linux = {
    runcmd = [
      [ "dnf", "clean", "all" ],
      [ "dnf", "makecache" ],
      [ "dnf", "install", "-y", "podman", "nginx" ],
      [ "mkdir", "-p", "/usr/local/chroot" ],
      [ "dnf", "install", "-y", "--installroot", "/usr/local/chroot", "--releasever", "10", "util-linux-core", "iproute", "procps-ng", "coreutils", "bash" ],
      [ "bash", "-c", "date > /usr/local/share/hello-scale" ],
      [ "mkdir", "-p", "/usr/local/chroot/usr/local/share" ],
      [ "bash", "-c", "uname -a > /usr/local/chroot/usr/local/share/hello-scale" ]
    ]
  }
}

resource "tls_private_key" "container_image_workshop" {
  count = local.create_ssh_keypair == true ? 1 : 0
  algorithm = "ED25519"
}

resource "aws_key_pair" "container_image_workshop" {
  count = local.create_ssh_keypair == true ? 1 : 0
  key_name = "container-image-workshop-ssh-key-${local.unique_name_suffix}"
  public_key = tls_private_key.container_image_workshop[0].public_key_openssh
}

resource "local_sensitive_file" "ssh_private_key" {
  count = local.create_ssh_keypair == true ? 1 : 0
  content = tls_private_key.container_image_workshop[0].private_key_openssh
  filename = "${path.root}/files/ec2_ssh_privkey_${local.unique_name_suffix}"
  directory_permission = "0700"
  file_permission = "0600"
}


data "cloudinit_config" "container_image_workshop_linux" {
  gzip = false
  base64_encode = true
  part {
    content_type = "text/cloud-config"
    content = yamlencode(local.cloud_init_config_linux)
  }
}

resource "aws_vpc" "container_image_workshop" {
  count = local.create_vpc ? 1 : 0
  cidr_block = var.aws_vpc_cidr
  enable_dns_hostnames = true
  tags = {
    Name = local.unique_name
  }
}

resource "aws_internet_gateway" "container_image_workshop" {
  count = local.create_vpc ? 1 : 0
  tags = {
    Name = "${local.unique_name}"
  }
}

resource "aws_internet_gateway_attachment" "container_image_workshop" {
  count = local.create_vpc ? 1 : 0
  internet_gateway_id = aws_internet_gateway.container_image_workshop[0].id
  vpc_id = local.vpc_id
}

resource "aws_subnet" "container_image_workshop" {
  count = local.create_vpc ? 1 : 0
  vpc_id = local.vpc_id
  map_public_ip_on_launch = true
  cidr_block = cidrsubnet(local.public_subnet_cidr,2,1)
  availability_zone = data.aws_availability_zones.available.names[count.index]
  tags = {
    "Name" = "${local.unique_name}-public-${count.index}"
  }
}

resource "aws_route_table" "container_image_workshop" {
  count = local.create_vpc ? 1 : 0
  vpc_id = local.vpc_id

  tags = {
    "Name" = "${local.unique_name}-public"
  }
}

resource "aws_route" "container_image_workshop" {
  count = local.create_vpc ? 1 : 0
  route_table_id = aws_route_table.container_image_workshop[0].id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.container_image_workshop[0].id
}

resource "aws_route_table_association" "container_image_workshop" {
  count = local.create_vpc ? 1 : 0
  subnet_id = local.subnet_id
  route_table_id = aws_route_table.container_image_workshop[0].id
}

resource "aws_security_group" "container_image_workshop" {
  name = "${local.unique_name}-admin"
  vpc_id = local.vpc_id
}

resource "aws_vpc_security_group_egress_rule" "allow_all_outbound" {
  security_group_id = aws_security_group.container_image_workshop.id
  cidr_ipv4 = "0.0.0.0/0"
  ip_protocol = "-1"
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh_inbound" {
  security_group_id = aws_security_group.container_image_workshop.id
  cidr_ipv4 = local.admin_ip_cidr
  from_port = 22
  to_port = 22
  ip_protocol = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "allow_additional_ports_inbound" {
  for_each = toset([for port in var.aws_ec2_additional_ports: tostring(port)])
  security_group_id = aws_security_group.container_image_workshop.id
  cidr_ipv4 = local.admin_ip_cidr
  from_port = each.key
  to_port = each.key
  ip_protocol = "tcp"
}

resource "aws_instance" "container_image_workshop_linux" {
  ami = data.aws_ami.linux.id
  instance_type = var.aws_ec2_instance_type
  user_data_replace_on_change = true
  user_data_base64 = data.cloudinit_config.container_image_workshop_linux.rendered
  subnet_id = local.subnet_id
  key_name = local.ec2_ssh_keypair
  vpc_security_group_ids = [ aws_security_group.container_image_workshop.id ]
  tags = {
    Name = "${local.unique_name}"
  }
}

resource "aws_instance" "container_image_workshop_freebsd" {
  count = var.create_freebsd_instance ? 1 : 0
  ami = data.aws_ami.freebsd.id
  instance_type = var.aws_ec2_instance_type
  subnet_id = local.subnet_id
  key_name = local.ec2_ssh_keypair
  vpc_security_group_ids = [ aws_security_group.container_image_workshop.id ]
  tags = {
    Name = "${local.unique_name}"
  }
}

output "linux_instance_public_ip" {
  value = aws_instance.container_image_workshop_linux.public_ip
}

output "freebsd_instance_public_ip" {
  value = var.create_freebsd_instance ? aws_instance.container_image_workshop_freebsd[0].public_ip : null
}

output "ssh_private_key_file" {
  value = local.create_ssh_keypair == true ? local_sensitive_file.ssh_private_key[0].filename : null
}
